--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "test": " "
   },
   "dependencies": {
+    "accounting-js": "^1.1.1",
     "core-js": "^3.6.5",
     "firebase": "^7.16.0",
     "vue": "^2.6.11",
+    "vue-headful": "^2.1.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0",
